# mth5-validator

./: .gitignore  EXAMPLES.md  LICENSE  README.md  SETUP.md  pyproject.toml  requirements.txt
.github/workflows/: build-executables.yml
src/: build_standalone_validator.py  mth5_validator_standalone.py
